actualizacion de titulos

--- a/exposicion/html/navmenu.html
+++ b/exposicion/html/navmenu.html
@@ -15,9 +15,9 @@
             <p>ISO-25000-SqaRE</p>
         </ol>
     </a>
-    <a href="MacCall.html" class="nav-item">
+    <a href="McCall.html" class="nav-item">
         <ol >
-            <p>MacCall</p>
+            <p>McCall</p>
         </ol>
     </a>
     
