--- a/exposicion/html/MacCall.html
+++ b/exposicion/html/MacCall.html
@@ -6,7 +6,7 @@
     <title>EXposicion</title>
 
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/Smaccall.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <script src="../js/navbar.js"></script>
 
