--- a/exposicion/html/Iso250.html
+++ b/exposicion/html/Iso250.html
@@ -19,7 +19,7 @@
 
     <main>
         <section class="section1">
-            <h2>VÍDEO INFORMÁTIVO</h2>
+            <h2>VÍDEO INFOR</h2>
            <div class="contenedor1">
             <img src="../img/video.png" alt="">
 
