cambios en navbar

--- a/exposicion/html/navmenu.html
+++ b/exposicion/html/navmenu.html
@@ -2,7 +2,7 @@
 <ul class="nav-pills"> 
         <a href="index.html" class="nav-item">
             <ol>
-               <p>Inicio</p>
+               <p>INICIO</p>
             </ol>
         </a>     
     <a class="nav-item" href="FURPS.html">
