--- a/exposicion/html/Iso250.html
+++ b/exposicion/html/Iso250.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EXposicion</title>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <link rel="stylesheet" href="../css/iso250.css">
 
     <link rel="stylesheet" href="../css/navbar.css">
     <script src="../js/navbar.js"></script>
