--- a/exposicion/html/FURPS.html
+++ b/exposicion/html/FURPS.html
@@ -14,12 +14,11 @@
 </head>
 
 <body class="body">
+    <header> <div class="navegador" id="navegador"></div></header>
     <div class="contenedor">
-        <div class="navegador" id="navegador">
-
-        </div>
+        
         <div class="contenido">
-            <header><h2>Modelo de Calidad FURPS</h2></header>
+            <h2>Modelo de Calidad FURPS</h2>
             <div id="descrip">
                 <p>
                     Modelo presentado por Hewlett- Packard (HP) en 1987, donde se desarrolla un conjunto de factores de
