--- a/exposicion/html/McCall.html
+++ b/exposicion/html/McCall.html
@@ -11,7 +11,8 @@
     <script src="../js/navbar.js"></script>
   </head>
   <body>
-    <div class="navegador" id="navegador"></div>
+    <header><div class="navegador" id="navegador"></div></header>
+    
     <main>
       <h1>Modelo McCall</h1>
       <div>
