--- a/exposicion/html/Iso250.html
+++ b/exposicion/html/Iso250.html
@@ -18,14 +18,14 @@
         <h1>ISO 25000-SquaRE</h1>
     </header>
 
-    <main>
+    <main class="main">
         <section class="section1">
-            <h2>VÍDEO INFORMATIVO</h2>
+            <h2 class="titulo">VÍDEO INFORMATIVO</h2>
            <div class="contenedor1">
-            <img src="../img/video.png" alt="">
+            <img src="../img/video.png" class="video" alt="">
 
             <div class="contenedor2">
-                <h3>¿QUÉ ES?</h3>
+                <h3 class="ques">¿QUÉ ES?</h3>
                 <p>ISO/IEC 25000, conocida como SQuaRE (System and Software Quality Requirements and Evaluation), es una familia de normas que tiene por objetivo la creación de un marco de trabajo común para evaluar la calidad del producto software.
 
                 La familia ISO/IEC 25000 es el resultado de la evolución de otras normas anteriores, especialmente de las normas ISO/IEC 9126, que describe las particularidades de un modelo de calidad del producto software, e ISO/IEC 14598, que abordaba el proceso de evaluación de productos software. Esta familia de normas ISO/IEC 25000 se encuentra compuesta por cinco divisiones.</p>
@@ -35,28 +35,36 @@
            </div>
 
            <section class="section2">
-               <h2>EXPLICACIÓN DE CADA UNA DE LAS NORMAS</h2>
+               <h2 class="tsection2">EXPLICACIÓN DE CADA UNA DE LAS NORMAS</h2>
 
                <h4>ISO/IEC 2500n – División de Gestión de Calidad</h4>
                <P>Las normas que forman este apartado definen todos los modelos, términos y definiciones comunes referenciados por todas las otras normas de la familia 25000.</P>
                <img src="../img/norma1.jpg" alt="">
+            </section>
 
+            <section class="section3">
                <h4>ISO/IEC 2501n – División de Modelo de Calidad</h4>
                <p>Las normas de este apartado presentan modelos de calidad detallados incluyendo características para calidad interna, externa y en uso del producto software.</p>
                <img src="../img/norma2.png" alt="">
+            </section>
 
+            <section class="section4">
                <h4>ISO/IEC 2502n – División de Medición de Calidad</h4>
                <p>Estas normas incluyen un modelo de referencia de la medición de la calidad del producto, definiciones de medidas de calidad (interna, externa y en uso) y guías prácticas para su aplicación.</p>
                <img src="../img/norma3.png" alt="">
+            </section>
 
+            <section class="section5">
                <h4>ISO/IEC 2503n – División de Requisitos de Calidad</h4>
                <p>Las normas que forman este apartado ayudan a especificar requisitos de calidad que pueden ser utilizados en el proceso de elicitación de requisitos de calidad del producto software a desarrollar o como entrada del proceso de evaluación.</p>
                <img src="../img/norma4.png" alt="">
+            </section>
 
+            <section class="section6">
                <h4>ISO/IEC 2504n – División de Evaluación de Calidad</h4>
                <p>Este apartado incluye normas que proporcionan requisitos, recomendaciones y guías para llevar a cabo el proceso de evaluación del producto software.</p>
                <img src="../img/norma5.png" alt="">
-           </section>
+            </section>
 
         </section>
     </main>
