--- a/exposicion/html/Iso250.html
+++ b/exposicion/html/Iso250.html
@@ -23,11 +23,11 @@
         <section class="section1">
             <h2 class="titulo">VÍDEO INFORMATIVO</h2>
            <div class="contenedor1">
-            <img src="../img/video.png" class="video" alt="">
+           <video src="../video/Norma ISO 25000 y modelos de evaluacin de software.mp4" controls></video>
 
             <div class="contenedor2">
                 <h3 class="ques">¿QUÉ ES?</h3>
-                <p>ISO/IEC 25000, conocida como SQuaRE (System and Software Quality Requirements and Evaluation), es una familia de normas que tiene por objetivo la creación de un marco de trabajo común para evaluar la calidad del producto software.
+                <p class="p">ISO/IEC 25000, conocida como SQuaRE (System and Software Quality Requirements and Evaluation), es una familia de normas que tiene por objetivo la creación de un marco de trabajo común para evaluar la calidad del producto software.
 
                 La familia ISO/IEC 25000 es el resultado de la evolución de otras normas anteriores, especialmente de las normas ISO/IEC 9126, que describe las particularidades de un modelo de calidad del producto software, e ISO/IEC 14598, que abordaba el proceso de evaluación de productos software. Esta familia de normas ISO/IEC 25000 se encuentra compuesta por cinco divisiones.</p>
 
@@ -66,6 +66,27 @@
                <p>Este apartado incluye normas que proporcionan requisitos, recomendaciones y guías para llevar a cabo el proceso de evaluación del producto software.</p>
                <img src="../img/norma5.png" alt="">
             </section>
+
+            <section class="section7">
+                <h4>VENTAJAS</h4>
+                <p>Alinea los objetivos del  software con las necesidades reales que se le demandan.
+                    Evitando ineficiencias y maximizando la rentabilidad y calidad del producto de software. Por otro lado, certificar el software aumenta la satisfacción del cliente y mejora la imagen de la empresa. 
+                    Cumplir los requisitos contractuales y demostrar a los clientes que la calidad del software es primordial.
+                    El proceso de evaluaciones periódicas ayuda a supervisar continuamente el rendimiento y la mejora</p>
+                <img src="../img/ventajas.png" alt="">
+             </section>
+
+             <section class="section8">
+                <h4>DESVENTAJAS</h4>
+                <p>El soporte prestado a las empresas no concuerda con el modelo de evaluación de la ISO/IEC 25000.
+                En dado caso de no pasar la evaluación es mejor comenzar de nuevo que reparar los errores de nuestro pruducto.
+                La refactorización de producto es muy costosa.
+                </p>
+                <img src="../img/desventaja.png" alt="">
+             </section>
+ 
+
+
 
         </section>
     </main>
