--- a/exposicion/html/index.html
+++ b/exposicion/html/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body class="body">
+    <header>        
+        <div class="navegador" id="navegador"></div>        
+    </header>
     <div class="contenedor">
-        <div class="navegador" id="navegador">
-
-        </div>
         <div class="contenido">
         </div>
     </div>
