--- a/exposicion/html/index.html
+++ b/exposicion/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=0,maximum-scale=1,user-scalable=no">
 
-    <title>EXposicion</title>
+    <title>Exposicion</title>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 
     <link rel="stylesheet" href="../css/navbar.css">
