agregar css base

--- a/exposicion/html/FURPS.html
+++ b/exposicion/html/FURPS.html
@@ -48,10 +48,11 @@
                 <div class="significado" id="funcionalidad">
                     <p>La funcionalidad: hace referencia a los requerimientos específicos de lo que
                         debería realizar el sistema, se valora evaluando los siguientes atributos:
-                        Características y capacidades del programa
-                        Generalidades de las funciones
-                        capacidades
-                        Seguridad del sistema
+                        <li>Características y capacidades del programa</li>
+                        <li>Generalidades de las funciones</li>
+                        <li>capacidades</li>
+                        <li>Seguridad del sistema</li>
+                        
                     </p>
                 </div>
             
