subida agregar base

--- a/exposicion/html/FURPS.html
+++ b/exposicion/html/FURPS.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/cssfurps.css">
+    <link rel="stylesheet" href="../css/base.css">
     <script src="../js/navbar.js"></script>
     <script src="../js/modal.js"></script>
 </head>
@@ -60,10 +61,10 @@
                     <p>Los requerimientos de usabilidad hace referencia a la facilidad de uso del
                         producto, mide el esfuerzo que invierte el usuario para utilizar el sistema, se valora evaluando los
                         siguientes atributos: pueden incluir subcategorías tales como:
-                        Factores humanos.
-                        Estética.
-                        Consistencia.
-                        Documentación.
+                        <li>Factores humanos.</li>
+                        <li>Estética.</li>
+                        <li>Consistencia.</li>
+                        <li>Documentación.</li>
                     </p>
                 </div>
                 <div class="significado" id="confiabilidad" style="display: none;">
