--- a/exposicion/html/Iso250.html
+++ b/exposicion/html/Iso250.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/iso250.css">
 
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/base.css">
     <script src="../js/navbar.js"></script>
 </head>
 <body>
