--- a/exposicion/html/McCall.html
+++ b/exposicion/html/McCall.html
@@ -6,6 +6,7 @@
     <title>Exposicion</title>
 
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/Smccall.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <script src="../js/navbar.js"></script>
