--- a/exposicion/html/index.html
+++ b/exposicion/html/index.html
@@ -9,6 +9,7 @@
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/base.css">
     <script src="../js/navbar.js"></script>
 </head>
 
@@ -18,6 +19,8 @@
     </header>
     <div class="contenedor">
         <div class="contenido">
+            <h1>bienvenido</h1>
+            <h3>en esta pagina informativa encontraras</h3>
         </div>
     </div>
 </body>
