--- a/exposicion/html/Iso250.html
+++ b/exposicion/html/Iso250.html
@@ -11,17 +11,11 @@
     <script src="../js/navbar.js"></script>
 </head>
 <body>
-    <header>
-    <div class="navegador" id="navegador">
-    </header>
-    </div>
-   
-        <h1>ISO 25000-SquaRE</h1>
    
 
     <main class="main">
         <section class="section1">
-            <h2 class="titulo">VÍDEO INFORMATIVO</h2>
+            <h2 class="titulo">ISO 25000 SQUARE</h2>
            <div class="contenedor1">
            <video src="../video/Norma ISO 25000 y modelos de evaluacin de software.mp4" controls></video>
 
