--- a/exposicion/html/index.html
+++ b/exposicion/html/index.html
@@ -18,10 +18,11 @@
         <div class="navegador" id="navegador"></div>        
     </header>
     <div class="contenedor">
-        <div class="contenido">
-            <h1>bienvenido</h1>
-            <h3>en esta pagina informativa encontraras</h3>
-        </div>
+      <center><h1>BIENVENIDO</h1>
+        <h3>En esta pagina informativa encontraras 3 diferentes modelos de calidad de software</h3>
+        <img src="../img/diagra.jpg" alt="">
+    </center>
+            
     </div>
 </body>
 
