--- a/exposicion/html/Iso250.html
+++ b/exposicion/html/Iso250.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EXposicion</title>
+    <title>Eposicion</title>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="../css/iso250.css">
 
