--- a/exposicion/html/FURPS.html
+++ b/exposicion/html/FURPS.html
@@ -101,6 +101,9 @@
                 </div>
                 
             </div>
+            <div class="video">
+                <video src="../video/modelo-de-calidad-furps.mp4" controls></video>
+            </div>
             <div id="furps+">
                 <img src="../img/furps+.jpg" alt="">
             </div>
