--- a/exposicion/html/FURPS.html
+++ b/exposicion/html/FURPS.html
@@ -105,7 +105,11 @@
                 <video src="../video/modelo-de-calidad-furps.mp4" controls></video>
             </div>
             <div id="furps+">
-                <img src="../img/furps+.jpg" alt="">
+                <div class="descripcionf+">
+                    
+                </div>
+                <div class="imagenf+"><img src="../img/furps+.jpg" alt=""></div>
+                
             </div>
         </div>
     </div>
