--- a/exposicion/html/FURPS.html
+++ b/exposicion/html/FURPS.html
@@ -108,11 +108,11 @@
                 <div class="descripcionf+">
                     <div class="pro">
                         <h3>PRO</h3>
-                        <p>Se pueden reducir los riesgos de no considerar alguna de las facetas del desarrollo de un sistema.
+                        <p>Se pueden reducir los riesgos de no considerar alguna de las facetas del desarrollo de un sistema.<br>
 
-                            Es posible estandarizar algunos criterios para poder obtener los requerimientos.
+                            Es posible estandarizar algunos criterios para poder obtener los requerimientos.<br>
                             
-                            Los criterios son de fácil comprensión lo que facilita su implementación</p>
+                            Los criterios son de fácil comprensión lo que facilita su implementación.</p>
                     </div>
                     <div class="contra">
                         <h3>CONTRA</h3>
@@ -125,7 +125,7 @@
         </div>
     </div>
     <footer>
-        
+
     </footer>
 </body>
 
