--- a/exposicion/html/McCall.html
+++ b/exposicion/html/McCall.html
@@ -127,6 +127,6 @@
 
     </section><br>
 
-    <footer>Derechos reservados por mi</footer>
+    <footer id="footer">Derechos reservados por mi</footer>
   </body>
 </html>
